# kerwanos

./: Cargo.toml
.cargo/: config.toml
crates/kernel/: Cargo.toml
crates/kernel/src/: allocator.rs  interrupts.rs  lib.rs
crates/kernel/src/allocator/: fsb.rs
crates/kernel/src/memory/: mod.rs
crates/kernel/src/task/: executor.rs  keyboard.rs  simple_executor.rs
crates/kernel/src/tty/: mod.rs
crates/pci/: Cargo.toml
crates/pci/src/: access.rs  bus.rs  lib.rs  register.rs
crates/pci/src/structures/: device.rs  location.rs  mod.rs
crates/pci/src/structures/register/: bar.rs  command.rs  mod.rs  status.rs
crates/pic/: Cargo.toml
crates/pic/src/: lib.rs
crates/pic/src/pic8259/: mod.rs
crates/qemu/: Cargo.toml
crates/qemu/src/: lib.rs
crates/serial/: Cargo.toml
crates/serial/src/: lib.rs  uart16550.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs
crates/shell/src/commands/: mod.rs
crates/std/: Cargo.toml
crates/std/src/: lib.rs  macros.rs
crates/std/src/io/: stdio.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs
crates/vga/: Cargo.toml
crates/vga/src/: lib.rs
crates/virtio/: Cargo.toml
crates/virtio/src/: lib.rs
crates/x86/: Cargo.toml
crates/x86/src/: addr.rs  lib.rs
crates/x86/src/dt/: gdt.rs  idt.rs  mod.rs
crates/x86/src/instructions/: interrupts.rs  mod.rs  port.rs  tlb.rs
crates/x86/src/interruptions/: mod.rs
crates/x86/src/io/: mod.rs
crates/x86/src/registers/: control.rs  mod.rs  rflags.rs
crates/x86/src/segmentation/: mod.rs
crates/x86/src/structures/paging/: frame.rs  frame_alloc.rs  mod.rs  page.rs  page_table.rs
crates/x86/src/structures/paging/mapper/: mapped_page_table.rs  mod.rs  offset_page_table.rs
crates/x86/src/tss/: mod.rs
src/: lib.rs  main.rs
