[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel.workspace = true
std.workspace = true
lazy_static.workspace = true
spin.workspace = true
futures-util.workspace = true
